--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,8 +1,49 @@
-.min-height {
-    min-height: 300px;
+/* CHANGING PRIMARY ELEMENTS*/
+.flashcard .btn-outline-primary#btn-flip {
+    color: #009EFF;
+    border-color: #009EFF;
+    font-weight: 600;
+    border-width: 2px;
+}
+
+.flashcard .btn-outline-primary#btn-flip:hover{
+    color: white;
+    border-color: #009EFF;
+    font-weight: 600;
+    background-color: #009EFF;
+}
+
+
+.min-height-70px {
+    min-height: 70px;
+}
+
+.min-height-230px {
+    min-height: 230px;
 }
 
 .navbar-brand img {
     margin-bottom: 4px;
     margin-right: 10px;
+}
+
+/* SHOW CARD PAGE */
+.flashcard .servis-btns {
+    font-size: 0.8rem;
+}
+
+.flashcard .text-left {
+    text-align: left;
+}
+
+.flashcard li {
+    list-style: none;
+}
+
+.flashcard #pageA {
+    font-weight:600;
+}
+
+.flashcard #pageB {
+    display:none;
 }
