--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -18,8 +18,8 @@
     min-height: 70px;
 }
 
-.min-height-230px {
-    min-height: 230px;
+.min-height-300px {
+    min-height: 300px;
 }
 
 .navbar-brand img {
@@ -46,4 +46,28 @@
 
 .flashcard #pageB {
     display:none;
+}
+
+.btn-outline-primary#btn-flip-front:focus {
+    outline: none !important;
+    box-shadow: none;
+}
+
+.btn-outline-primary#btn-flip-front:active {
+    outline: none !important;
+    box-shadow: none;
+}
+
+.btn-outline-primary#btn-flip-back:focus {
+    outline: none !important;
+    box-shadow: none;
+}
+
+.btn-outline-primary#btn-flip-back:active {
+    outline: none !important;
+    box-shadow: none;
+}
+
+.invisible {
+    visibility: hidden;
 }
