--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -1,73 +1,63 @@
-
-<% layout ('layouts/boilerplate.ejs')  %> 
-<!--
-<div class="row">
-<div class="col-lg-6 offset-lg-1 flashcard">
-    <div class="card text-center shadow" >
-        <div class="card-body">
-          <div class="d-flex justify-content-center align-items-center min-height-70px">
-            <div class="card-text pageA" id="pageA"><%- card.pageA %> </div>
-          </div>
-          <hr>
-          <div class="d-flex flex-column min-height-230px">
-            <div class="card-text" id="pageB"><%- card.pageB %> </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Právničíme</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/card.css">
+</head>
+<body class="d-flex flex-column vh-100 bg-light">
+    <%- include('../partials/navbar') %> 
+    <main class="container mt-5">
+        <div class="row">
+          <div class="col-lg-5 offset-lg-1">
+            <div class="">
+              <div id="card" class="flashcard"> 
+                <div class="card front text-center shadow"> 
+                  <div class="card-body ">
+                    <div class="d-flex justify-content-center align-items-center min-height-300px">
+                      <div class="card-text pageA" id="pageA"><%- card.pageA %> </div>
+                    </div>
+                  </div>
+                  <div class="card-footer d-flex justify-content-center">
+                    <a href="#" class="btn btn-outline-primary" id='btn-flip-front'>Otočit!</a>
+                  </div>
+                </div> 
+                <div class="card back shadow invisible" id="back">
+                  <div class="card-body">
+                    <div class="d-flex flex-column d-flex justify-content-center align-items-center min-height-300px">
+                      <div class="card-text" id="pageB"><%- card.pageB %> </div>
+                    </div>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between">
+                    <div>
+                      <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-danger hard-btn" >Těžké</a>
+                    </div>
+                    <a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>
+                    <div>
+                      <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-success easy-btn" >Snadné</a>
+                    </div>
+                  </div>
+                </div> 
+              </div>
+              <p class="text-center mt-4 text-muted servis-btns">
+                <% if (currentUser && currentUser.admin) { %>
+                  <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a> | 
+                <% } %>
+                  <a href="#" class="text-muted">Nahlásit chybu</a>
+              </p>
+            </div>
           </div>
         </div>
-        <div class="card-footer d-flex justify-content-between">
-          <div>
-            <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-danger hard-btn disabled" >Těžké</a>
-          </div>
-          <a href="#" class="btn btn-outline-primary" id='btn-flip'>Otočit!</a>
-          <div>
-            <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-success easy-btn disabled" >Snadné</a>
-          </div>
-        </div>
-      </div>
-      <p class="text-center mt-4 text-muted servis-btns">
-        <% if (currentUser && currentUser.admin) { %>
-          <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a> | 
-        <% } %>
-          <a href="#" class="text-muted">Nahlásit chybu</a></p>
-    </div>
-    <div class="col-lg-2">
-      <div class="card shadow">
-        <h5 class="card-title">68 %</h5>
-      </div>
-    </div>
-  </div>
-  -->
-
-  <div class="row">
-    <div class="col-lg-5 offset-lg-1">
-      <div class="">
-        <div id="card" class=""> 
-          <div class="card front text-center shadow"> 
-            <div class="card-body">
-              <div class="d-flex justify-content-center align-items-center min-height-300px">
-                <div class="card-text pageA" id="pageA"><%- card.pageA %> </div>
-              </div>
-            </div>
-            <div class="card-footer d-flex justify-content-center">
-              <a href="#" class="btn btn-outline-primary" id='btn-flip-front'>Otočit!</a>
-            </div>
-          </div> 
-          <div class="card back shadow invisible" id="back">
-            <div class="card-body">
-              <div class="d-flex flex-column min-height-300px">
-                <div class="card-text" id="pageB"><%- card.pageB %> </div>
-              </div>
-            </div>
-            <div class="card-footer d-flex justify-content-between">
-              <div>
-                <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-danger hard-btn" >Těžké</a>
-              </div>
-              <a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>
-              <div>
-                <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-success easy-btn" >Snadné</a>
-              </div>
-            </div>
-          </div> 
-        </div>
-      </div>
-    </div>
-  </div>
+    </main>
+    <%- include('../partials/footer') %> 
+    <!-- JS for Bootstrap -->
+    <script src="/js/jquery.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
+    <script src="/js/jquery.flip.min.js" ></script>
+    <script src="/js/flip.custom.js" ></script>
+  </body>
+</html>
