--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Právničíme</title>
+    <title>Inlege</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/landing.css">
@@ -11,7 +11,7 @@
 <body class="d-flex flex-column vh-100">
     <%- include('./partials/navbar') %> 
 
-    <main role="main">
+    <main role="main"> 
         <%- include('./partials/alert') %>
         <section class="jumbotron text-center">
           <div class="container my-5">
@@ -28,8 +28,8 @@
           <div class="container">
   
             <div class="row">
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/trestnipravo" class="landing-link">
+                <div class="offset-3 col-lg-2 col-md-4 col-6 mb-4">
+                    <a href="/category/trestnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_trest.jpeg" class="rounded-circle landing-img m-3" alt="">
@@ -41,7 +41,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/obcanskepravo" class="landing-link">
+                    <a href="/category/obcanskepravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_obcan.jpeg" class="rounded-circle landing-img m-3" alt="">
@@ -53,7 +53,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/spravnipravo" class="landing-link">
+                    <a href="/category/spravnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_sprava.jpeg" class="rounded-circle landing-img m-3" alt="">
@@ -64,8 +64,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/ustavnipravo" class="landing-link">
+                <div class="offset-3 col-lg-2 col-md-4 col-6 mb-4">
+                    <a href="/category/ustavnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_ustavko.jpeg" class="rounded-circle landing-img m-3" alt="">
@@ -77,7 +77,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/obchodnipravo" class="landing-link">
+                    <a href="/category/obchodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_obchod.jpeg" class="rounded-circle landing-img m-3" alt="">
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <a href="/cards/getrandomcard/mezinarodnipravo" class="landing-link">
+                    <a href="/category/mezinarodnipravo" class="landing-link">
                         <div class="card shadow">
                             <div class="d-flex justify-content-center">
                                 <img src="/img/landing_mezinarodko.jpeg" class="rounded-circle landing-img m-3" alt="">
