--- a/views/cards/new.ejs
+++ b/views/cards/new.ejs
@@ -1,38 +1,27 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-sm-6 offset-sm-3">
-        <h1>Vložit novou kartu</h1>
-        <form class="row g-3 needs-validation mt-3" novalidate action="/cards/new" method="POST">
+        <h5>Vložit novou kartu do sekce <%= sectionName %> v kategorii <%= category %> </h5>
+        <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= category %>/<%= sectionId %>/newCard" method="POST">
             <div class="mt-2">
             <label for="pageA" class="form-label">Strana A</label>
-            <input type="text" class="form-control" id="pageA" name="pageA" required>
+            <textarea name="pageA" id="pageA" class="form-control" cols="30" rows="5" required></textarea>
             <div class="valid-feedback">
                 V pořádku!
             </div>
             </div>
             <div class="mt-2">
                 <label for="pageB" class="form-label">Strana B</label>
-                <input type="text" class="form-control" id="pageB" name="pageB" required>
+                <textarea name="pageB" id="pageB" class="form-control" cols="30" rows="10" required></textarea>
                 <div class="valid-feedback">
                 V pořádku!
                 </div>
             </div>
             <div class="mt-2">
                 <label for="author" class="form-label">Autor</label>
-                <input type="text" class="form-control" id="author" name="author" required>
+                <input type="text" class="form-control" id="author" name="author" value="<%= currentUser.email %>" required>
                 <div class="valid-feedback">
                 V pořádku!
                 </div>
-            </div>
-            <div class="mt-2">
-            <label for="topic" class="form-label">Kategorie</label>
-            <select class="form-select" name="topic" id="topic" required>
-                <% for( let cat of categories) { %>
-                    <option value="<%= cat.value %>"><%= cat.text %></option>
-                <% } %>
-            </select>
-            <div class="invalid-feedback">
-                Zvolte kategorii.
-            </div>
             </div>
             <div class="col-12">
             <button class="btn btn-primary" type="submit">Vložit</button>
