--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -10,15 +10,23 @@
 </head>
 <body class="d-flex flex-column vh-100 bg-light">
     <%- include('../partials/navbar') %> 
+    <nav class="navbar bg-white shadow">
+      <div class="container">
+          <ul class="navbar-nav">
+              <li><a href="/category/<%= card.category %>" class="back-link"><i class="fas fa-chevron-left me-2 mb-2"></i>Zpět na kategorii</a></li>
+              <li><p class="fw-bolder m-0"><%= sectionName %></p></li>
+          </ul>
+      </div>
+    </nav>
     <main class="container mt-5">
         <div class="row">
-          <div class="col-lg-5 offset-lg-1">
+          <div class="col-lg-5 offset-lg-2">
             <div class="">
               <div id="card" class="flashcard"> 
                 <div class="card front text-center shadow"> 
-                  <div class="card-body ">
+                  <div class="card-body d-block">
                     <div class="d-flex justify-content-center align-items-center min-height-300px">
-                      <div class="card-text pageA" id="pageA"><%- card.pageA %> </div>
+                      <div class="card-text pageA m-4" id="pageA"><%- card.pageA %> </div>
                     </div>
                   </div>
                   <div class="card-footer d-flex justify-content-center">
@@ -28,26 +36,35 @@
                 <div class="card back shadow invisible" id="back">
                   <div class="card-body">
                     <div class="d-flex flex-column d-flex justify-content-center align-items-center min-height-300px">
-                      <div class="card-text" id="pageB"><%- card.pageB %> </div>
+                      <div class="card-text m-4" id="pageB"><%- card.pageB %> </div>
                     </div>
                   </div>
                   <div class="card-footer d-flex justify-content-between">
                     <div>
-                      <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-danger hard-btn" >Těžké</a>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-outline-danger hard-btn" >Těžké</a>
                     </div>
                     <a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>
                     <div>
-                      <a href="/cards/getrandomcard/<%=card.topic%>" class="btn btn-outline-success easy-btn" >Snadné</a>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-outline-success easy-btn" >Snadné</a>
                     </div>
                   </div>
                 </div> 
               </div>
-              <p class="text-center mt-4 text-muted servis-btns">
+              <div class="text-center mt-4 servis-btns d-flex justify-content-center align-items-center">
                 <% if (currentUser && currentUser.admin) { %>
-                  <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a> | 
+                  <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a>
+                  <a href="/cards/remove/<%= card._id%>" class="text-muted mx-3">Odstranit kartu</a>
                 <% } %>
                   <a href="#" class="text-muted">Nahlásit chybu</a>
-              </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="card shadow">
+              <div class="card-body">
+                <p><%= nextNum - 1 %>/<%= sectionLength %></p>
+                <p>Trestní právo: Obecná část</p>
+              </div>
             </div>
           </div>
         </div>
@@ -55,6 +72,7 @@
     <%- include('../partials/footer') %> 
     <!-- JS for Bootstrap -->
     <script src="/js/jquery.min.js" ></script>
+    <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
     <script src="/js/jquery.flip.min.js" ></script>
