--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,15 +1,67 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<div class="row">
-    <div class="col-md-3">
-        some content
+<div class="row mb-3">
+    <div class="col-md-3 offset-md-1 mb-3">
+        <div class="card shadow">
+            <div class="card-body category-box">
+                <i class="fas fa-user-lock mt-4 mb-2"></i>
+                <p class="mt-2 mb-4">Trestní právo</p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-9">
-        list of categories
-        <div class="add-category">
-            <form action="/category/new" method="POST">
-                <input type="text">
-                <button>Přidat kategorii</button>
-            </form>
+    <div class="col-md-7 section-list">
+        <div class="card shadow">
+            <div class="card-body">
+                    <div class="row">
+                        <div class="col-9">                    
+                                <p class="m-0 category-headline">Zvolte balíček</p>
+                        </div>
+                    </div>
+                    <hr class="mt-0">
+                <% if (category.sections.length < 1) { %>
+                    <p>Kategorie neobsahuje žádné sekce.</p>
+                <% } else { category.sections.forEach(section => { %>
+                    <div class="row py-2">
+                        <div class="col-xl-9">                    
+                                <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
+                        </div>
+                        <div class="col-xl-1 col-6">
+                            <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger">Spustit</a>
+                        </div>
+                        <div class="col-xl-2 col-6 d-flex justify-content-evenly align-items-center">
+                            <p class="m-0">0/<%= section.cards.length %></p>
+                            <% if (currentUser) { %>
+                                <a href="/category/<%= category.name %>/<%= section._id %>/newCard  " class="add-icon"><i class="fas fa-plus-square"></i></a>
+                                <a href="/category/<%= category.name %>/removeSection/<%= section._id %>" class="remove-icon"><i class="fas fa-times"></i></a>
+                            <% } %>
+                        </div>
+                    </div>
+                    <hr class="">
+                <% }) }%>
+            </div>
         </div>
     </div>
 </div>
+<% if (currentUser && currentUser.isAdmin) { %>
+<div class="row">
+    <div class="col-md-7 offset-md-4">
+        <div class="card shadow add-section">
+            <div class="card-body">
+                <form action="/category/<%= category.name  %>/newSection" method="POST">
+                    <div class="form-group row">
+                        <label for="name" class="col-2 col-form-label">Přidat sekci</label>
+                        <div class="col-5">
+                            <input type="text" class="form-control" id="name" name="name">
+                        </div>
+                        <div class="col-3">
+                            <input type="text" class="form-control-plaintext" id="category" name="category" value="<%= category.name %>" readonly>
+                        </div>
+                        <div class="col-2">
+                            <button class="btn btn-primary w-100">Přidat</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<% } %>
