--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/favicon.ico" alt="" width="30" height="24"> PRÁVNIČÍME.CZ</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+    <div class="container">
+      <a class="navbar-brand" href="/"><img src="/favicon.ico" alt="" width="30" height="24"> Inlege</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,9 +9,6 @@
           <% if (currentUser && currentUser.admin) { %>
             <li class="nav-item">
               <a class="nav-link" href="/admin/listallcards">Všechny kartičky</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/cards/new">Přidat kartičku</a>
             </li>
           <% } %>
         </ul>
