--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,3 +36,8 @@
     color:#161619;
     font-weight: 500;
 }
+
+.orange-shadow {
+    box-shadow: 0 .5rem 1rem rgba(242, 66, 53, 0.8);
+    border: 1px solid rgba(242, 66, 53, 0.4);;
+}
