--- a/views/cards/new.ejs
+++ b/views/cards/new.ejs
@@ -1,7 +1,7 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-sm-6 offset-sm-3">
         <h5>Vložit novou kartu do sekce <%= sectionName %> v kategorii <%= category %> </h5>
-        <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= category %>/<%= sectionId %>/newCard" method="POST">
+        <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= category %>/section/<%= sectionId %>/newCard" method="POST">
             <div class="mt-2">
             <label for="pageA" class="form-label">Strana A</label>
             <textarea name="pageA" id="pageA" class="form-control" cols="30" rows="5" required></textarea>
