--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
         <ul class="navbar-nav">
           <% if (currentUser && currentUser.admin) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/admin/listallcards">Všechny kartičky</a>
+              <a class="nav-link" href="/admin/listAllUsers">Uživatelé</a>
             </li>
           <% } %>
         </ul>
