--- a/views/sections/listAllCards.ejs
+++ b/views/sections/listAllCards.ejs
@@ -11,6 +11,7 @@
             <div class="col-sm-5"><%= card.pageB %> </div>
             <div class="col-sm-1"><a href="/cards/edit/<%= card._id%>">Upravit</a></div>
             <div class="col-sm-1"><a href="/cards/remove/<%= card._id%>">Odstranit</a></div>
+            <div class="col-sm-1"><a href="/cards/show/<%= card._id%>">Zobrazit</a></div>
             <hr>
         </div>
     <% } %> 
