--- a/views/auth/admin_registr.ejs
+++ b/views/auth/admin_registr.ejs
@@ -25,7 +25,7 @@
                 <input type="password" class="form-control" id="key" name="key" required>
             </div>
         <div class="col-12">
-        <button class="btn btn-primary" type="submit">Zaregistrovat</button>
+        <button class="btn btn-danger mt-3" type="submit">Zaregistrovat</button>
         </div>
     </form>
 </div>
