--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -3,7 +3,6 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card shadow">
-                <img src="/img/login_pic.jpeg" alt="" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title mb-0">Přihlášení</h5>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/login" method="POST">
@@ -16,7 +15,7 @@
                             <input type="password" class="form-control form-control-sm" id="password" name="password" required>
                         </div>
                         <div>
-                            <button class="btn btn-info btn-sm w-100 mt-2" type="submit">Přihlásit se</button>
+                            <button class="btn btn-danger w-100 mt-3" type="submit">Přihlásit se</button>
                         </div>
                     </form>
                 </div>
