--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -3,7 +3,6 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card shadow">
-                <img src="/img/registration_pic.jpeg" alt="" class="card-img-top">
                 <div class="card-body">
                 <h5 class="card-title mb-0">Registrace</h5>
                 <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new" method="POST">
@@ -26,7 +25,7 @@
                         </div>
                     </div>
                     <div>
-                    <button class="btn btn-sm btn-info w-100" type="submit">Zaregistrovat</button>
+                    <button class="btn btn-danger w-100 mt-3" type="submit">Zaregistrovat</button>
                     </div>
                 </form>
             </div>
