--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Právničíme</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/card.css">
 </head>
@@ -30,7 +31,7 @@
                     </div>
                   </div>
                   <div class="card-footer d-flex justify-content-center">
-                    <a href="#" class="btn btn-outline-primary" id='btn-flip-front'>Otočit!</a>
+                    <a href="#" class="btn btn-outline-danger" id='btn-flip-front'>Otočit</a>
                   </div>
                 </div> 
                 <div class="card back shadow invisible" id="back">
@@ -39,13 +40,10 @@
                       <div class="card-text m-4" id="pageB"><%- card.pageB %> </div>
                     </div>
                   </div>
-                  <div class="card-footer d-flex justify-content-between">
+                  <div class="card-footer d-flex justify-content-center">
+                    <!--<a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>-->
                     <div>
-                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>"></a>
-                    </div>
-                    <a href="#" class="btn btn-outline-primary" id='btn-flip-back'>Otočit!</a>
-                    <div>
-                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-primary easy-btn" >Další</a>
+                      <a href="/category/<%=card.category%>/section/<%=card.section%>/<%= nextNum %>" class="btn btn-danger easy-btn" >Další</a>
                     </div>
                   </div>
                 </div> 
