--- a/views/category.ejs
+++ b/views/category.ejs
@@ -37,13 +37,20 @@
                 <% if (category.sections.length < 1) { %>
                     <p>Kategorie neobsahuje žádné sekce.</p>
                 <% } else { category.sections.forEach(section => { %>
+                    <% if(section.isPublic){ %> 
                     <div class="row py-2">
                         <div class="col-7">                    
-                                <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
+                                <% if(currentUser && currentUser.sections.includes(section._id)) { %>
+                                    <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
+                                <% } else { %>
+                                    <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
+                                <% } %> 
                         </div>
                         <div class="col-3">
                             <% if (!currentUser){ %> 
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>
+                            <% } else if(currentUser.sections.includes(section._id)) { %> 
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
                             <% } else { %> 
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
                             <% } %> 
@@ -52,12 +59,74 @@
                             <p class="m-0"><%= section.cards.length %> <i class="fas fa-scroll"></i></p>
                             <% if (currentUser && currentUser.admin) { %>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
-                                <a href="/category/<%= category.name %>/removeSection/<%= section._id %>" class="remove-icon"><i class="fas fa-times px-1"></i></a>
+                                <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
                             <% } %>
                         </div>
                     </div>
                     <hr class="">
+                      <!-- Modal -->
+                        <div class="modal fade" id="deleteSectionModal<%=section._id%>" tabindex="-1">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h5 class="modal-title">Opravdu chcete odstranit sekci <%=section.name%>?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
+                                <div class="modal-body d-flex justify-content-center align-items-center">
+                                    <a href="/category/<%= category.name %>/removeSection/<%= section._id %>/" class="btn btn-danger">Ano, odstranit</a>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    <% } %>
+                    <% if(!section.isPublic && currentUser && currentUser.admin){ %> 
+                        <div class="row py-2">
+                            <div class="col-5">                    
+                                    <% if(currentUser && currentUser.sections.includes(section._id)) { %>
+                                        <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
+                                    <% } else { %>
+                                        <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
+                                    <% } %> 
+                            </div>
+                            <div class="col-2">
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/publish"" class="btn btn-sm btn-info">Zveřejnit</a>
+                            </div>
+                            <div class="col-3">
+                                <% if (!currentUser){ %> 
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>
+                                <% } else if(currentUser.sections.includes(section._id)) { %> 
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
+                                <% } else { %> 
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
+                                <% } %> 
+                            </div>
+                            <div class="col-2 d-flex justify-content-evenly align-items-center">
+                                <p class="m-0"><%= section.cards.length %> <i class="fas fa-scroll"></i></p>
+                                <% if (currentUser && currentUser.admin) { %>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
+                                    <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
+                                <% } %>
+                            </div>
+                        </div>
+                        <hr class="">
+                          <!-- Modal -->
+                            <div class="modal fade" id="deleteSectionModal<%=section._id%>" tabindex="-1">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title">Opravdu chcete odstranit sekci <%=section.name%>?</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                    </div>
+                                    <div class="modal-body d-flex justify-content-center align-items-center">
+                                        <a href="/category/<%= category.name %>/removeSection/<%= section._id %>/" class="btn btn-danger">Ano, odstranit</a>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        <% } %>
+
                 <% }) }%>
             </div>
         </div>
