--- a/views/auth/password_sent.ejs
+++ b/views/auth/password_sent.ejs
@@ -3,10 +3,8 @@
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
             <div class="card shadow text-center p-4">
-                <h1>Gratulujeme!<br /></h1>
-                <h3>Dokončil jsi balíček "<%= sectionName%>"</h3>
+                <h4>Na tvůj e-mail jsme odeslali odkaz, přes který si můžeš nastavit nové heslo.</h4>
                 <p><i class="fas fa-check-circle me-2 fa-3x my-4" style="color:green"></i></p>
-                <a href="/category/<%= category%>">Zpět na kategorii</a>
             </div>
         </div>
     </div>
