--- a/views/cards/edit.ejs
+++ b/views/cards/edit.ejs
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-12">
-            <button class="btn btn-primary" type="submit">Vložit</button>
+            <button class="btn btn-danger btn-sm" type="submit">Vložit</button>
             </div>
         </form>
     </div>
