--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -4,26 +4,30 @@
         <div class="col-md-6 offset-md-3">
             <div class="card shadow">
                 <div class="card-body">
-                    <h5 class="card-title mb-0">Přihlášení</h5>
+                    <div class="text-center">
+                        <h4 class="mb-3 mt-2">Přihlášení</h4>
+                    </div>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/login" method="POST">
                         <div class="mt-1">
-                        <label for="email" class="form-label col-form-label-sm">E-mail</label>
+                        <label for="email" class="form-label">E-mail</label>
                             <input type="email" class="form-control form-control-sm" id="username" name="username" autofocus required>
                         </div>
-                        <div class="mt-1">
-                            <label for="password" class="form-label col-form-label-sm">Heslo</label>
+                        <div class="mt-3">
+                            <label for="password" class="form-label">Heslo</label>
                             <input type="password" class="form-control form-control-sm" id="password" name="password" required>
                         </div>
-                        <div>
+                        <div class="">
                             <button class="btn btn-danger w-100 mt-3" type="submit">Přihlásit se</button>
+                        </div>
+                        <div class="text-center">
+                            <a href="/auth/user/requestPassword" class="text-muted"><small>Zapomenuté heslo</small></a>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
     
     
-    <script src="/js/validateForms.js"></script>
+<script src="/js/validateForms.js"></script>
