--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -1,24 +1,34 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container d-flex justify-content-center align-items-center mt-1 mb-5">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-4 offset-md-4">
             <div class="card shadow">
                 <div class="card-body">
-                <h5 class="card-title mb-0">Registrace</h5>
+                <div class="text-center">
+                    <h4 class="mb-3 mt-2">Registrace</h4>
+                </div>
                 <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new" method="POST">
-                    <div class="mt-1">
-                    <label for="email" class="form-label col-form-label-sm">E-mail</label>
+                    <div class="mt-2">
+                        <label for="firstname" class="form-label">Jméno</label>
+                            <input type="text" class="form-control form-control-sm" id="firstname" name="firstname" required>
+                    </div>
+                    <div class="mt-3">
+                        <label for="lastname" class="form-label">Příjmení</label>
+                            <input type="text" class="form-control form-control-sm" id="lastname" name="lastname" required>
+                    </div>
+                    <div class="mt-3">
+                    <label for="email" class="form-label">E-mail</label>
                         <input type="email" class="form-control form-control-sm" id="email" name="email" required>
                     </div>
-                    <div class="mt-1">
-                        <label for="password" class="form-label col-form-label-sm">Heslo</label>
+                    <div class="mt-3">
+                        <label for="password" class="form-label">Heslo</label>
                         <input type="password" class="form-control form-control-sm" id="password" name="password" minlength=6 required>
                         <div class="invalid-feedback">
                             Heslo musí obsahovat nejméně 6 znaků.
                         </div>
                     </div>
-                    <div class="mt-1">
-                        <label for="password_confirmation" class="form-label col-form-label-sm">Heslo znovu</label>
+                    <div class="mt-3">
+                        <label for="password_confirmation" class="form-label">Heslo znovu</label>
                         <input type="password" class="form-control form-control-sm" id="password_confirmation" name="password_confirmation" minlength=6 required>
                         <div class="invalid-feedback">
                             Heslo musí obsahovat nejméně 6 znaků.
