--- a/views/category.ejs
+++ b/views/category.ejs
@@ -134,20 +134,20 @@
 </div>
 <% if (currentUser && currentUser.admin) { %>
 <div class="row">
-    <div class="col-md-7 offset-md-4 mb-3">
+    <div class="col-md-7 offset-md-4 mb-3 mt-4">
         <div class="card shadow add-section">
-            <div class="card-body">
+            <div class="card-body pb-0">
                 <form action="/category/<%= category.name  %>/newSection" method="POST">
                     <div class="form-group row">
                         <label for="name" class="col-2 col-form-label">Přidat sekci</label>
-                        <div class="col-5">
+                        <div class="col-4">
                             <input type="text" class="form-control" id="name" name="name">
                         </div>
                         <div class="col-3">
                             <input type="text" class="form-control-plaintext" id="category" name="category" value="<%= category.name %>" readonly>
                         </div>
-                        <div class="col-2">
-                            <button class="btn btn-primary w-100">Přidat</button>
+                        <div class="col-3">
+                            <button class="btn btn-danger btn-sm w-100">Přidat</button>
                         </div>
                     </div>
                 </form>
