--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -1,5 +1,5 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<div class="container d-flex justify-content-center align-items-center mt-1 mb-5">
+<div class="container forms-background d-flex justify-content-center align-items-center mt-1 mb-5">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card shadow">
