--- a/views/category.ejs
+++ b/views/category.ejs
@@ -4,12 +4,15 @@
         <div class="col-md-10 offset-md-1 mb-4">
             <div class="card orange-shadow">
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-7">
                         <h5 class="p-3 mb-0"><i class="fas fa-lock fa-2x px-2"></i>Zaregistruj se a získej přístup ke stovkám kartiček zdarma</h5>
-                        <p class="text-muted px-3"><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatao.</small></p>
+                        <p class="text-muted px-3"><small>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatao.</small></p>
                     </div>
-                    <div class="col-sm-4 p-3 d-flex justify-content-center align-items-center">
+                    <div class="col-sm-5 p-3 d-flex justify-content-around align-items-center">
                         <a class="btn btn-danger" href="/auth/user/new">Zaregistrovat se</a>
+                        <% if(demoCat.sections.length > 0){ %> 
+                            <a class="btn btn-outline-danger" href="/category/demo/section/<%= demoCat.sections[0]%>/1">Vyzkoušet demo</a>
+                        <% } %>
                     </div>
                 </div>
             </div>
