--- a/views/sections/finished.ejs
+++ b/views/sections/finished.ejs
@@ -4,9 +4,14 @@
         <div class="col-md-6 col-12 offset-md-3">
             <div class="card shadow text-center p-4">
                 <h1>Gratulujeme!<br /></h1>
-                <h3>Dokončil jsi balíček "<%= sectionName%>"</h3>
+                <h3>Dokončil/a jsi balíček "<%= sectionName%>"</h3>
                 <p><i class="fas fa-check-circle me-2 fa-3x my-4" style="color:green"></i></p>
-                <a href="/category/<%= category%>">Zpět na kategorii</a>
+                <% if(!demo){ %> 
+                    <a href="/category/<%= category%>">Zpět na kategorii</a>
+                <% } else { %> 
+                    <p>Stejně jako cvičný balíček můžeš zdarma procházet stovky kartiček ze všech oborů práva. Stačí se zdarma zaregistrovat.</p>
+                    <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
+                <% } %>
             </div>
         </div>
     </div>
